--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootswatch": "^4.4.1",
     "electron-is-dev": "^1.1.0",
     "formik": "^2.0.8",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
