--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-is-dev": "^1.1.0",
     "formik": "^2.0.8",
     "history": "^4.10.1",
+    "random-number-csprng": "^1.0.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
@@ -46,6 +47,7 @@
     "concurrently": "^5.0.2",
     "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
+    "react-map-gl": "^5.2.1",
     "wait-on": "^3.3.0"
   }
 }
